<resources>
    <string name="app_name">Film</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_a_book">Add a cat movie</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="sauvegarder">Save</string>
    <string name="author">Author</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="url_wiki" translatable="false">Url_Wiki</string>
    <string name="url_post" translatable="false">Url_Post</string>
    <string name="app_info" translatable="false">App info</string>
    <string name="app_text" translatable="false">ISMIN 2020 Android project - GU Ruinan THAI Jean Philippe
        \n\ndata URL : https://data.opendatasoft.com/explore/dataset/cats-in-movies%40public/table/
        \n\ncleverapp URL : https://ruinan-bookshelf.cleverapps.io
        \n\nThe data displayed are a film\'s poster, title, producer and year of release.
        \n\nLibrary used: Picasso </string>
    <string name="info">Info</string>
</resources>